2012-03-07  Jon Lee  <jonlee@apple.com>

        Move NotificationContents into Notification
        https://bugs.webkit.org/show_bug.cgi?id=80487
        <rdar://problem/10965519>

        Reviewed by Jian Li.

        * UIProcess/Notifications/WebNotificationManagerProxy.cpp: Remove extraneous include.
        * WebProcess/Notifications/WebNotificationManager.cpp:
        (WebKit::WebNotificationManager::show): Refactor to use accessor methods on Notification.

2012-03-15  Brent Fulgham  <bfulgham@webkit.org>

        Unreviewed build correction. WinCairo export definitions
        file was not updated when the main Apple file was changed.

        * win/WebKit2CFLite.def: Revise export declarations to match
        new symbol names.

2012-03-15  Anders Carlsson  <andersca@apple.com>

        REGRESSION(r107168?): Assertion failures under pageContainsAnyHorizontalScrollbars causing multiple "crashes" on the Lion Intel Debug WebKit2 testers
        https://bugs.webkit.org/show_bug.cgi?id=81162
        <rdar://problem/11050423>

        Reviewed by Beth Dakin and Jessie Berlin.

        Downgrade the ASSERT to a simple if check since scrollableArea->isOnActivePage() can return false when layout happens during page transitions.

        * WebProcess/WebPage/WebPage.cpp:
        (WebKit::pageContainsAnyHorizontalScrollbars):

2012-03-15  David Hyatt  <hyatt@apple.com>

        https://bugs.webkit.org/show_bug.cgi?id=81258

        Add a preference for enabling the new multi-column layout code that will be based on regions.

        Reviewed by Beth Dakin.

        * Shared/WebPreferencesStore.h:
        (WebKit):
        * UIProcess/API/C/WKPreferences.cpp:
        (WKPreferencesSetRegionBasedColumnsEnabled):
        (WKPreferencesGetRegionBasedColumnsEnabled):
        * UIProcess/API/C/WKPreferencesPrivate.h:
        * WebProcess/WebPage/WebPage.cpp:
        (WebKit::WebPage::updatePreferences):

2012-03-14  Anders Carlsson  <andersca@apple.com>
