@@ -1,3 +1,10 @@
+2012-03-15  Anders Carlsson  <andersca@apple.com>
+
+        Try to fix the Snow Leopard build.
+
+        * UIProcess/API/mac/PDFViewController.mm:
+        (WebKit::PDFViewController::pdfKitBundle):
+
 2012-03-07  Jon Lee  <jonlee@apple.com>
 
         Move NotificationContents into Notification
